--- a/src/components/MobilMenu.astro
+++ b/src/components/MobilMenu.astro
@@ -61,7 +61,7 @@
                         <ul class="dropdown__sub">
 
                             <li class="dropdown__li">
-                                <a href="/centovacast" class="dropdown__anchor font-semibold">Radio Streaming</a>
+                                <a href="/sonicpanel" class="dropdown__anchor font-semibold">Radio Streaming</a>
                             </li>
                             <li class="dropdown__li">
                                 <a href="/tv-streaming" class="dropdown__anchor font-semibold">Tv Streaming</a>
