--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,7 +102,7 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 					para que tu sitio sea exitoso.
 				</h5>
 				<div>
-					<BotonTres href="/centovacast/" title="Conoce más" />
+					<BotonTres href="/sonicpanel/" title="Conoce más" />
 				</div>
 			</div>
 
@@ -125,7 +125,7 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 					title1="Radio"
 					title2="Streaming"
 					img="/img/SolarRadioBroken.svg"
-					href="/centovacast/"
+					href="/sonicpanel/"
 				/>
 				<CardServiciosIndex
 					title1="Streaming"
@@ -248,7 +248,7 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 			</div>
 
 			<div class="contenedor mx-auto pb-20 flex items-center justify-center">
-				<BotonCuatro href="/centovacast/" title="Ver todos los planes"/>
+				<BotonCuatro href="/sonicpanel/" title="Ver todos los planes"/>
 			</div>
 		</section>
 
