--- a/src/pages/reseller-radio.astro
+++ b/src/pages/reseller-radio.astro
@@ -75,7 +75,7 @@ import CardPreciosResellerRadio from "../components/resellerradio/CardPreciosRes
         <section class="contenedor mx-auto grid grid-cols-1 py-10 md:grid-cols-2 lg:grid-cols-3">
             <CardDescripCentovaUno
                 src="/img/SolarCodeScanBold.svg"
-                title="CentovaCast"
+                title="SonicPanel"
                 content="Administra tu estación personal, o automatiza tu negocio de hospedaje de radio con miles de clientes"
             />
             <CardDescripCentovaUno
@@ -104,38 +104,42 @@ import CardPreciosResellerRadio from "../components/resellerradio/CardPreciosRes
         >
             <CardPreciosResellerRadio
                 plan="Star"
-                precio="$10"
+                precio="$35"
                 activacion="Plan de Inicio"
-                des1="10"
+                des1="Ilimitado"
                 des2="192 KBPS"
-                des3="50 GB"
+                des3="Ilimitado GB"
+                des4="100 GB Transferencia"
                 link="https://clientes.servistream.net/index.php?rp=/store/streaming-reseller-radio/streaming-start"
             />
             <CardPreciosResellerRadio
                 plan="Smart"
-                precio="$20"
+                precio="$42"
                 activacion="Plan Basico"
-                des1="30"
+                des1="Ilimitado"
                 des2="192 KBPS"
-                des3="80 GB"
+                des3="Ilimitado GB"
+                des4="500 GB Transferencia"
                 link="https://clientes.servistream.net/index.php?rp=/store/streaming-reseller-radio/streaming-smart"
             />
             <CardPreciosResellerRadio
                 plan="Max"
-                precio="$30"
+                precio="$55"
                 activacion="Plan Intermedio"
-                des1="50"
-                des2="192 KBPS"
-                des3="100 GB"
+                des1="Ilimitado"
+                des2="320 KBPS"
+                des3="Ilimitado GB"
+                des4="1000 GB Transferencia"
                 link="https://clientes.servistream.net/index.php?rp=/store/streaming-reseller-radio/streaming-max"
             />
             <CardPreciosResellerRadio
                 plan="Pro"
-                precio="$40"
+                precio="$65"
                 activacion="Plan Avanzado"
-                des1="100"
-                des2="192 KBPS"
-                des3="200 GB"
+                des1="Ilimitado"
+                des2="320 KBPS"
+                des3="Ilimitado GB"
+                des4="Transferencia Ilimitada"
                 link="https://clientes.servistream.net/index.php?rp=/store/streaming-reseller-radio/streaming-pro"
             />
         </section>
