--- a/src/pages/sonicpanel.astro
+++ b/src/pages/sonicpanel.astro
@@ -85,10 +85,10 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
 
         <section class="contenedor mx-auto flex items-center flex-wrap justify-center pb-20">
 
-            <CardPreciosCentova plan="Sonic 128" precio="$10" activacion="Descuento por suscripción anual" des1="260" des2="128 KBPS" des3="Ilimitado" link="#"/>
-            <CardPreciosCentova plan="Sonic 256" precio="$15" activacion="Descuento por suscripción anual" des1="400" des2="256 KBPS" des3="Ilimitado" link="#"/>
-            <CardPreciosCentova plan="Sonic 320" precio="$20" activacion="Descuento por suscripción anual" des1="999" des2="320 KBPS" des3="Ilimitado" link="#"/>
-            <CardPreciosCentova plan="Sonic Ilimitado" precio="$25" activacion="Descuento por suscripción anual" des1="Ilimitado" des2="320 KBPS" des3="Ilimitado" link="#"/>
+            <CardPreciosCentova plan="Económico" precio="$5" activacion="Descuento por suscripción anual" des1="500" des2="128 KBPS" des3="10 GB" link="https://clientes.servistream.net/index.php?rp=/store/streaming-radio/stream-economico"/>
+            <CardPreciosCentova plan="Básico" precio="$10" activacion="Descuento por suscripción anual" des1="1000" des2="192 KBPS" des3="30 GB" link="https://clientes.servistream.net/index.php?rp=/store/streaming-radio/stream-basico"/>
+            <CardPreciosCentova plan="Plus" precio="$15" activacion="Descuento por suscripción anual" des1="3000" des2="320 KBPS" des3="50 GB" link="https://clientes.servistream.net/index.php?rp=/store/streaming-radio/stream-plus"/>
+            <CardPreciosCentova plan="Profesional" precio="$20" activacion="Descuento por suscripción anual" des1="5000" des2="320 KBPS" des3="100 GB" link="https://clientes.servistream.net/index.php?rp=/store/streaming-radio/stream-profesional"/>
 
         </section>
 
