--- a/src/pages/reseller-radio.astro
+++ b/src/pages/reseller-radio.astro
@@ -28,7 +28,7 @@ import CardPreciosResellerRadio from "../components/resellerradio/CardPreciosRes
                 <h1
                     class="text-white text-3xl font-light pb-5 tracking-tighter md:text-5xl lg:text-6xl"
                 >
-                    <span class="text-is-gradient">Reseller Radio</span>
+                    <span class="text-is-gradient font-bold">Reseller Radio</span>
                 </h1>
                 <p class="text-white">
                     Inicia tu negocio de radio por internet, nosotros te
