--- a/src/pages/server-azuracast.astro
+++ b/src/pages/server-azuracast.astro
@@ -53,23 +53,23 @@ import PreciosAzura from "../components/server_azuracast/PreciosAzura.astro"
     <section class="my-20">
 
         <div class="contenedor_planes mx-auto mb-5">
-            <PreciosAzura plan="Azure Cloud S" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="8 GB RAM" core="4 vCPU Cores" capacidad="200 GB SSD" conexion="32 TB Traffic - Unlimited Incoming" ubicacion="Estados Unidos" precio="$15" >
+            <PreciosAzura plan="Azure Cloud S" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="2 GB RAM" core="2 vCPU Cores" capacidad="80 GB SSD" conexion="Tráfico Ilimitado up to 1 Gbit/s" ubicacion="Estados Unidos" precio="$11" link="https://clientes.servistream.net/index.php?rp=/store/azuracast/azure-cloud-s" >
 
         </div>
         <div class="contenedor_planes mx-auto mb-5">
-            <PreciosAzura plan="Azure Cloud M" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="16 GB RAM" core="6 vCPU Cores" capacidad="400 GB SSD" conexion="32 TB Traffic" ubicacion="Estados Unidos" precio="$30" >
+            <PreciosAzura plan="Azure Cloud M" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="4 GB RAM" core="2 vCPU Cores" capacidad="160 GB SSD" conexion="Tráfico Ilimitado up to 1 Gbit/s" ubicacion="Estados Unidos" precio="$17" link="https://clientes.servistream.net/index.php?rp=/store/azuracast/azure-cloud-m" >
 
         </div>
         <div class="contenedor_planes mx-auto mb-5">
-            <PreciosAzura plan="Azure Cloud L" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="30 GB RAM" core="8 vCPU Cores" capacidad="800 GB SSD" conexion="32 TB Traffic" ubicacion="Estados Unidos" precio="$40" >
+            <PreciosAzura plan="Azure Cloud L" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="8 GB RAM" core="4 vCPU Cores" capacidad="240 GB SSD" conexion="Tráfico Ilimitado up to 1 Gbit/s" ubicacion="Estados Unidos" precio="$24" link="https://clientes.servistream.net/index.php?rp=/store/azuracast/azure-cloud-l" >
 
         </div>
         <div class="contenedor_planes mx-auto mb-5">
-            <PreciosAzura plan="Azure Cloud XL" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="60 GB RAM" core="10 vCPU Cores" capacidad="1.6 TB SSD" conexion="32 TB Traffic" ubicacion="Estados Unidos" precio="$65" >
+            <PreciosAzura plan="Azure Cloud XL" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="16 GB RAM" core="8 vCPU Cores" capacidad="320 SSD" conexion="Tráfico Ilimitado up to 1 Gbit/s" ubicacion="Estados Unidos" precio="$40" link="https://clientes.servistream.net/index.php?rp=/store/azuracast/azure-cloud-xl" >
 
         </div>
         <div class="contenedor_planes mx-auto">
-            <PreciosAzura plan="Azure Cloud XXXL" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="120 GB RAM" core="24 vCPU Cores" capacidad="2.4 TB SSD" conexion="32 TB Traffic" ubicacion="Estados Unidos" precio="$105" >
+            <PreciosAzura plan="Azure Cloud XXXL" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="24 GB RAM" core="12 vCPU Cores" capacidad="640 SSD" conexion="Tráfico Ilimitado up to 1 Gbit/s" ubicacion="Estados Unidos" precio="$65" link="https://clientes.servistream.net/index.php?rp=/store/azuracast/azure-cloud-xxxl" >
 
         </div>
         
