--- a/src/pages/sonicpanel.astro
+++ b/src/pages/sonicpanel.astro
@@ -28,8 +28,7 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
                 <h1
                     class="text-white text-3xl font-light pb-5 tracking-tighter md:text-5xl lg:text-6xl"
                 >
-                    Conecta con el Mundo tu <br />
-                    <span class="text-is-gradient">Radio Streaming SonicPanel</span>
+                    <span class="text-is-gradient font-bold">Radio Streaming SonicPanel</span>
                 </h1>
                 <p class="text-white">
                     Hemos desarrollado una plataforma completa para que su
