--- a/src/pages/tv-streaming.astro
+++ b/src/pages/tv-streaming.astro
@@ -29,7 +29,7 @@ import PlayerTv from "../components/tv_streaming/PlayerTv.astro";
                 <h1
                     class="text-white text-3xl font-light pb-5 tracking-tighter md:text-5xl lg:text-6xl"
                 >
-                    <span class="text-is-gradient">Video Live Streaming</span>
+                    <span class="text-is-gradient font-bold">Video Live Streaming</span>
                 </h1>
 
                 <p class="text-white mb-10">
