--- a/src/pages/sonicpanel.astro
+++ b/src/pages/sonicpanel.astro
@@ -8,6 +8,7 @@ import LogosScrollHosting from "../components/hosting_linux/LogosScrollHosting.a
 import CardDescripCentovaUno from "../components/centovacast/CardDescripCentovaUno.astro";
 import CardPreciosCentova from "../components/centovacast/CardPreciosCentova.astro";
 import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaDos.astro";
+import PromocionRadio from "../components/PromocionRadio.astro";    /* CODIGO DE PROMOCION DE RADIO */
 
 ---
 
@@ -65,6 +66,11 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
                 </article>
             </div>
         </header>
+
+        <div>
+            <PromocionRadio />
+        </div>
+        
 
 
         <section class="contenedor mx-auto grid grid-cols-1 py-10 md:grid-cols-2 lg:grid-cols-3">
