--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,69 +23,66 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 	<main>
 		<!-- INICIA CODIGO DE HEADER MENU INDEX -->
 
-		<header class="h-screen">
-			<Top />
-			<div class="hidden lg:block">
-				<Menu />
+		<header class="h-screen flex flex-col justify-between">
+			<div>
+				<Top />
+				<div class="hidden lg:block">
+					<Menu />
+				</div>
+				<div class="pt-4 lg:hidden"><MobileMenu /></div>
 			</div>
-			<div class="pt-4 lg:hidden"><MobileMenu /></div>
 
-			<section class="flex flex-col justify-center">
-
-				<section class="contenedor mx-auto">
-					<section
-						class="mt-20 px-5 grid grid-cols-1 grid-rows-1 gap-2 place-content-center lg:grid-cols-2"
-					>
-						<div>
-							<h2 class="text-white pb-3 text-lg underline">
-								Expertos en soluciones web desde 2014
-							</h2>
-							<h1
-								class="text-white text-4xl font-bold md:text-5xl lg:text-7xl"
-							>
-								El mejor Hosting y Radio Streaming
-							</h1>
-							<p class="text-white text-xl pt-2 lg:text-2xl">
-								Nos aseguramos de que tu sitio web sea rápido,
-								seguro y esté siempre activo, para que tus
-								visitantes y motores de búsqueda confíen en ti.
-								Garantizado.
-							</p>
-							<div class="mt-10 flex flex-col md:flex-row">
-								<div>
-									<BotonUno
-										href="/hosting-cloud/"
-										title="Comenzar ahora"
-									/>
-								</div>
-								<div>
-									<BotonDos
-										href="/paginas-web/"
-										title="Más que un sitio web"
-									/>
-								</div>
+			<section class="container mx-auto">
+				<section
+					class="px-5 grid grid-cols-1 grid-rows-1 gap-2 place-content-center lg:grid-cols-2"
+				>
+					<div>
+						<h2 class="text-white pb-3 text-lg underline">
+							Expertos en soluciones web desde 2014
+						</h2>
+						<h1
+							class="text-white text-4xl font-bold md:text-5xl lg:text-7xl"
+						>
+							El mejor Hosting y Radio Streaming
+						</h1>
+						<p class="text-white text-xl pt-2 lg:text-2xl">
+							Nos aseguramos de que tu sitio web sea rápido,
+							seguro y esté siempre activo, para que tus
+							visitantes y motores de búsqueda confíen en ti.
+							Garantizado.
+						</p>
+						<div class="mt-10 flex flex-col md:flex-row">
+							<div>
+								<BotonUno
+									href="/hosting-cloud/"
+									title="Comenzar ahora"
+								/>
+							</div>
+							<div>
+								<BotonDos
+									href="/paginas-web/"
+									title="Más que un sitio web"
+								/>
 							</div>
 						</div>
-						<div class="items-center justify-center hidden lg:flex">
-							<img
-								src="/img/server_izquiera-01.svg"
-								width="500"
-								alt="Server"
-							/>
-						</div>
-					</section>
-					<div class="px-5 mt-10">
-						<p class="text-white text-4xl font-bold">
-							Alojando a <span class="underline">1.245 sitios</span>,
-							clientes satisfechos +500
-						</p>
+					</div>
+					<div class="items-center justify-center hidden lg:flex">
+						<img
+							src="/img/server_izquiera-01.svg"
+							width="500"
+							alt="Server"
+						/>
 					</div>
 				</section>
-
+				<div class="px-5 mt-10">
+					<p class="text-white text-4xl font-bold">
+						Alojando a <span class="underline">1.245 sitios</span>,
+						clientes satisfechos +500
+					</p>
+				</div>
 			</section>
-			
-			
 
+			<div></div>
 		</header>
 
 		<!-- FIN CODIGO DE HEADER MENU INDEX -->
