--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,7 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 				</div>
 			</section>
 
-			<div></div>
+			<div class="h-[140px]"></div>
 		</header>
 
 		<!-- FIN CODIGO DE HEADER MENU INDEX -->
