--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,11 +67,11 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 						</div>
 					</div>
 					<div class="items-center justify-center hidden lg:flex">
-						<img
+						<!-- <img
 							src="/img/server_izquiera-01.svg"
 							width="500"
-							alt="Server"
-						/>
+							alt="Server" 
+						/> -->
 					</div>
 				</section>
 				<div class="px-5 mt-10">
@@ -324,6 +324,10 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 				#06142f,
 				#071335
 			);
+			background-image: url(../img/hosting-reseller.webp);
+			background-position: center;
+			background-size: cover;
+			background-repeat: no-repeat;
 			/*
 			background-image: linear-gradient(
 				to right top,
